@@ -44,5 +44,9 @@ rating sort for channels
 favorites handling
 [B]2.3.1[/B]
 new way of favorites handling
+[B]2.3.2[/B]
+high res icons
+[B]2.3.3[/B]
+high res icons for archives
 
 
